recursion.cons.lessons.recursion.cons.Nlast.scala.error
nlast:18: error: too many arguments for method last: (l: List[Int])Int
  } else return nlast(butLast(l),n-1)::last(l,n)
                                           ^